src/parser.js
module.exports = (function() {
  /*
   * Generated by PEG.js 0.8.0.
   *
   * http://pegjs.majda.cz/
   */

  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function SyntaxError(message, expected, found, offset, line, column) {
    this.message  = message;
    this.expected = expected;
    this.found    = found;
    this.offset   = offset;
    this.line     = line;
    this.column   = column;

    this.name     = "SyntaxError";
  }

  peg$subclass(SyntaxError, Error);

  function parse(input) {
    var options = arguments.length > 1 ? arguments[1] : {},

        peg$FAILED = {},

        peg$startRuleFunctions = { start: peg$parsestart },
        peg$startRuleFunction  = peg$parsestart,

        peg$c0 = peg$FAILED,
        peg$c1 = [],
        peg$c2 = function(ds) { return ds; },
        peg$c3 = { type: "other", description: "datum" },
        peg$c4 = function(d) { return d; },
        peg$c5 = "=",
        peg$c6 = { type: "literal", value: "=", description: "\"=\"" },
        peg$c7 = "#",
        peg$c8 = { type: "literal", value: "#", description: "\"#\"" },
        peg$c9 = function(id) { return new Symbol(id); },
        peg$c10 = "(",
        peg$c11 = { type: "literal", value: "(", description: "\"(\"" },
        peg$c12 = ")",
        peg$c13 = { type: "literal", value: ")", description: "\")\"" },
        peg$c14 = function(ds) {
            return Pair.makeList(ds);
          },
        peg$c15 = ".",
        peg$c16 = { type: "literal", value: ".", description: "\".\"" },
        peg$c17 = function(ds, d) {
              var i, len = ds.length, pair = new Pair(ds[len - 1], d);
              for (i = len - 2; i >= 0; --i) {
                pair = new Pair(ds[i], pair);
              }
              return pair;
            },
        peg$c18 = function(a) { return a; },
        peg$c19 = function(a, d) {
              var symbol;
              switch (a) {
                case ',@': symbol = new Symbol('unquote-splicing'); break;
                case ',':  symbol = new Symbol('unquote'); break;
                case '\'': symbol = new Symbol('quote'); break;
                case '`':  symbol = new Symbol('quasiquote'); break; 
              }
              return new Pair(symbol, new Pair(d, Nil));
            },
        peg$c20 = ",@",
        peg$c21 = { type: "literal", value: ",@", description: "\",@\"" },
        peg$c22 = /^['`,]/,
        peg$c23 = { type: "class", value: "['`,]", description: "['`,]" },
        peg$c24 = "#(",
        peg$c25 = { type: "literal", value: "#(", description: "\"#(\"" },
        peg$c26 = function(ds) { return new Vector(ds); },
        peg$c27 = { type: "other", description: "delimiter" },
        peg$c28 = "\"",
        peg$c29 = { type: "literal", value: "\"", description: "\"\\\"\"" },
        peg$c30 = ";",
        peg$c31 = { type: "literal", value: ";", description: "\";\"" },
        peg$c32 = "|",
        peg$c33 = { type: "literal", value: "|", description: "\"|\"" },
        peg$c34 = void 0,
        peg$c35 = { type: "any", description: "any character" },
        peg$c36 = /^[ \t]/,
        peg$c37 = { type: "class", value: "[ \\t]", description: "[ \\t]" },
        peg$c38 = /^[\n\r]/,
        peg$c39 = { type: "class", value: "[\\n\\r]", description: "[\\n\\r]" },
        peg$c40 = { type: "other", description: "linebreak" },
        peg$c41 = null,
        peg$c42 = "\r",
        peg$c43 = { type: "literal", value: "\r", description: "\"\\r\"" },
        peg$c44 = "\n",
        peg$c45 = { type: "literal", value: "\n", description: "\"\\n\"" },
        peg$c46 = { type: "other", description: "comment" },
        peg$c47 = "#;",
        peg$c48 = { type: "literal", value: "#;", description: "\"#;\"" },
        peg$c49 = "#|",
        peg$c50 = { type: "literal", value: "#|", description: "\"#|\"" },
        peg$c51 = "|#",
        peg$c52 = { type: "literal", value: "|#", description: "\"|#\"" },
        peg$c53 = function(s) { return s.join(''); },
        peg$c54 = function(i, s) { return i + s.join(''); },
        peg$c55 = /^[a-z]/i,
        peg$c56 = { type: "class", value: "[a-z]i", description: "[a-z]i" },
        peg$c57 = /^[!$%&*\/:<=>?\^_~]/,
        peg$c58 = { type: "class", value: "[!$%&*\\/:<=>?\\^_~]", description: "[!$%&*\\/:<=>?\\^_~]" },
        peg$c59 = /^[0-9]/,
        peg$c60 = { type: "class", value: "[0-9]", description: "[0-9]" },
        peg$c61 = /^[a-f]/i,
        peg$c62 = { type: "class", value: "[a-f]i", description: "[a-f]i" },
        peg$c63 = /^[+\-]/,
        peg$c64 = { type: "class", value: "[+\\-]", description: "[+\\-]" },
        peg$c65 = /^[.@]/,
        peg$c66 = { type: "class", value: "[.@]", description: "[.@]" },
        peg$c67 = "\\x",
        peg$c68 = { type: "literal", value: "\\x", description: "\"\\\\x\"" },
        peg$c69 = function(h) { return String.fromCharCode(h); },
        peg$c70 = function(h) { return parseInt(h.join(''), 16); },
        peg$c71 = function(e, d, s) {
              return e + '.' + d + s.join('');
            },
        peg$c72 = function(e, ss, s) {
              return e + ss + s.join('');
            },
        peg$c73 = function(n, ss) {
              return '.' + n + ss.join('');
            },
        peg$c74 = "@",
        peg$c75 = { type: "literal", value: "@", description: "\"@\"" },
        peg$c76 = /^[^|\\]/,
        peg$c77 = { type: "class", value: "[^|\\\\]", description: "[^|\\\\]" },
        peg$c78 = { type: "other", description: "boolean" },
        peg$c79 = "#true",
        peg$c80 = { type: "literal", value: "#true", description: "\"#true\"" },
        peg$c81 = "#t",
        peg$c82 = { type: "literal", value: "#t", description: "\"#t\"" },
        peg$c83 = function() { return new Bool(true);  },
        peg$c84 = "#false",
        peg$c85 = { type: "literal", value: "#false", description: "\"#false\"" },
        peg$c86 = "#f",
        peg$c87 = { type: "literal", value: "#f", description: "\"#f\"" },
        peg$c88 = function() { return new Bool(false); },
        peg$c89 = { type: "other", description: "character" },
        peg$c90 = "#\\x",
        peg$c91 = { type: "literal", value: "#\\x", description: "\"#\\\\x\"" },
        peg$c92 = function(h) { return new Char(String.fromCharCode(h)); },
        peg$c93 = "#\\",
        peg$c94 = { type: "literal", value: "#\\", description: "\"#\\\\\"" },
        peg$c95 = function(c) { return new Char(c); },
        peg$c96 = "alarm",
        peg$c97 = { type: "literal", value: "alarm", description: "\"alarm\"" },
        peg$c98 = function() { return '\u0007'; },
        peg$c99 = "backspace",
        peg$c100 = { type: "literal", value: "backspace", description: "\"backspace\"" },
        peg$c101 = function() { return '\u0008'; },
        peg$c102 = "delete",
        peg$c103 = { type: "literal", value: "delete", description: "\"delete\"" },
        peg$c104 = function() { return '\u007f'; },
        peg$c105 = "escape",
        peg$c106 = { type: "literal", value: "escape", description: "\"escape\"" },
        peg$c107 = function() { return '\u001b'; },
        peg$c108 = "newline",
        peg$c109 = { type: "literal", value: "newline", description: "\"newline\"" },
        peg$c110 = function() { return '\n';     },
        peg$c111 = "null",
        peg$c112 = { type: "literal", value: "null", description: "\"null\"" },
        peg$c113 = function() { return '\0';     },
        peg$c114 = "return",
        peg$c115 = { type: "literal", value: "return", description: "\"return\"" },
        peg$c116 = function() { return '\r';     },
        peg$c117 = "space",
        peg$c118 = { type: "literal", value: "space", description: "\"space\"" },
        peg$c119 = function() { return ' ';      },
        peg$c120 = "tab",
        peg$c121 = { type: "literal", value: "tab", description: "\"tab\"" },
        peg$c122 = function() { return '\t';     },
        peg$c123 = { type: "other", description: "string" },
        peg$c124 = function(ss) { return new Str(ss.join('')); },
        peg$c125 = "\\a",
        peg$c126 = { type: "literal", value: "\\a", description: "\"\\\\a\"" },
        peg$c127 = "\\b",
        peg$c128 = { type: "literal", value: "\\b", description: "\"\\\\b\"" },
        peg$c129 = "\\t",
        peg$c130 = { type: "literal", value: "\\t", description: "\"\\\\t\"" },
        peg$c131 = "\\n",
        peg$c132 = { type: "literal", value: "\\n", description: "\"\\\\n\"" },
        peg$c133 = "\\r",
        peg$c134 = { type: "literal", value: "\\r", description: "\"\\\\r\"" },
        peg$c135 = "\\\"",
        peg$c136 = { type: "literal", value: "\\\"", description: "\"\\\\\\\"\"" },
        peg$c137 = function() { return '"';      },
        peg$c138 = "\\\\",
        peg$c139 = { type: "literal", value: "\\\\", description: "\"\\\\\\\\\"" },
        peg$c140 = function() { return '\\';     },
        peg$c141 = "\\",
        peg$c142 = { type: "literal", value: "\\", description: "\"\\\\\"" },
        peg$c143 = function() { return ''; },
        peg$c144 = /^[^"\\]/,
        peg$c145 = { type: "class", value: "[^\"\\\\]", description: "[^\"\\\\]" },
        peg$c146 = "#u8(",
        peg$c147 = { type: "literal", value: "#u8(", description: "\"#u8(\"" },
        peg$c148 = function(bs) { return new ByteVector(bs); },
        peg$c149 = function(n) { return parseInt(n.join(''), 10); },
        peg$c150 = "25",
        peg$c151 = { type: "literal", value: "25", description: "\"25\"" },
        peg$c152 = /^[0-5]/,
        peg$c153 = { type: "class", value: "[0-5]", description: "[0-5]" },
        peg$c154 = "2",
        peg$c155 = { type: "literal", value: "2", description: "\"2\"" },
        peg$c156 = /^[0-4]/,
        peg$c157 = { type: "class", value: "[0-4]", description: "[0-4]" },
        peg$c158 = "1",
        peg$c159 = { type: "literal", value: "1", description: "\"1\"" },
        peg$c160 = { type: "other", description: "number" },
        peg$c161 = function(n) { return n; },
        peg$c162 = { type: "other", description: "binary number" },
        peg$c163 = function(c) { return c; },
        peg$c164 = function(radius, angle) {
              var real = Math.cos(angle) * radius;
              var imag = Math.sin(angle) * radius;
              return new Complex(real, imag);
            },
        peg$c165 = "i",
        peg$c166 = { type: "literal", value: "i", description: "\"i\"" },
        peg$c167 = function(i) { return new Complex(0, i);  },
        peg$c168 = "+",
        peg$c169 = { type: "literal", value: "+", description: "\"+\"" },
        peg$c170 = function(r, i) { return new Complex(r, i);  },
        peg$c171 = "-",
        peg$c172 = { type: "literal", value: "-", description: "\"-\"" },
        peg$c173 = function(r, i) { return new Complex(r, -i); },
        peg$c174 = "+i",
        peg$c175 = { type: "literal", value: "+i", description: "\"+i\"" },
        peg$c176 = function(r) { return new Complex(r, 1);  },
        peg$c177 = "-i",
        peg$c178 = { type: "literal", value: "-i", description: "\"-i\"" },
        peg$c179 = function(r) { return new Complex(r, -1); },
        peg$c180 = function(i) { return new Complex(0, -i); },
        peg$c181 = function(r) { return new Real(r);        },
        peg$c182 = function() { return new Complex(0, 1);  },
        peg$c183 = function() { return new Complex(0, -1); },
        peg$c184 = function(s, u) { return s === '-' ? -u : u; },
        peg$c185 = "/",
        peg$c186 = { type: "literal", value: "/", description: "\"/\"" },
        peg$c187 = function(numer, denom) { return numer / denom; },
        peg$c188 = function(ds) { return parseInt(ds.join(''), 2); },
        peg$c189 = { type: "other", description: "octal number" },
        peg$c190 = function(ds) { return parseInt(ds.join(''), 8); },
        peg$c191 = { type: "other", description: "decimal number" },
        peg$c192 = function(ds, s) {
              var num = parseFloat('.' + ds.join(''));
              if (s) {
                  num *= Math.pow(10, s);
              }
              return num;
            },
        peg$c193 = function(whole, fraction, s) {
              var num = parseInt(whole.join(''), 10) + parseFloat('.' + fraction.join(''));
              if (s) {
                  num *= Math.pow(10, s);
              }
              return num;
            },
        peg$c194 = function(u, s) {
              if (s) {
                  u *= Math.pow(10, s);
              }
              return u;
            },
        peg$c195 = function(e, s, ds) {
                return parseInt(ds.join(''), 10) * (s === '-' ? -1: 1);
            },
        peg$c196 = /^[esfdl]/,
        peg$c197 = { type: "class", value: "[esfdl]", description: "[esfdl]" },
        peg$c198 = function(ds) { return parseInt(ds.join(''), 10); },
        peg$c199 = { type: "other", description: "hexadecimal number" },
        peg$c200 = function(radius, angle) {
                var real = Math.cos(angle) * radius,
                    imag = Math.sin(angle) * radius;
                return new Complex(real, imag);
            },
        peg$c201 = function(ds) { return parseInt(ds.join(''), 16); },
        peg$c202 = "+inf.0",
        peg$c203 = { type: "literal", value: "+inf.0", description: "\"+inf.0\"" },
        peg$c204 = function() { return Infinity; },
        peg$c205 = "-inf.0",
        peg$c206 = { type: "literal", value: "-inf.0", description: "\"-inf.0\"" },
        peg$c207 = function() { return -Infinity; },
        peg$c208 = "+nan.0",
        peg$c209 = { type: "literal", value: "+nan.0", description: "\"+nan.0\"" },
        peg$c210 = function() { return NaN; },
        peg$c211 = "#i",
        peg$c212 = { type: "literal", value: "#i", description: "\"#i\"" },
        peg$c213 = "#e",
        peg$c214 = { type: "literal", value: "#e", description: "\"#e\"" },
        peg$c215 = "#b",
        peg$c216 = { type: "literal", value: "#b", description: "\"#b\"" },
        peg$c217 = "#o",
        peg$c218 = { type: "literal", value: "#o", description: "\"#o\"" },
        peg$c219 = "#d",
        peg$c220 = { type: "literal", value: "#d", description: "\"#d\"" },
        peg$c221 = "#x",
        peg$c222 = { type: "literal", value: "#x", description: "\"#x\"" },
        peg$c223 = /^[01]/,
        peg$c224 = { type: "class", value: "[01]", description: "[01]" },
        peg$c225 = /^[01234567]/,
        peg$c226 = { type: "class", value: "[01234567]", description: "[01234567]" },
        peg$c227 = /^[abcdef]/i,
        peg$c228 = { type: "class", value: "[abcdef]i", description: "[abcdef]i" },

        peg$currPos          = 0,
        peg$reportedPos      = 0,
        peg$cachedPos        = 0,
        peg$cachedPosDetails = { line: 1, column: 1, seenCR: false },
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$reportedPos, peg$currPos);
    }

    function offset() {
      return peg$reportedPos;
    }

    function line() {
      return peg$computePosDetails(peg$reportedPos).line;
    }

    function column() {
      return peg$computePosDetails(peg$reportedPos).column;
    }

    function expected(description) {
      throw peg$buildException(
        null,
        [{ type: "other", description: description }],
        peg$reportedPos
      );
    }

    function error(message) {
      throw peg$buildException(message, null, peg$reportedPos);
    }

    function peg$computePosDetails(pos) {
      function advance(details, startPos, endPos) {
        var p, ch;

        for (p = startPos; p < endPos; p++) {
          ch = input.charAt(p);
          if (ch === "\n") {
            if (!details.seenCR) { details.line++; }
            details.column = 1;
            details.seenCR = false;
          } else if (ch === "\r" || ch === "\u2028" || ch === "\u2029") {
            details.line++;
            details.column = 1;
            details.seenCR = true;
          } else {
            details.column++;
            details.seenCR = false;
          }
        }
      }

      if (peg$cachedPos !== pos) {
        if (peg$cachedPos > pos) {
          peg$cachedPos = 0;
          peg$cachedPosDetails = { line: 1, column: 1, seenCR: false };
        }
        advance(peg$cachedPosDetails, peg$cachedPos, pos);
        peg$cachedPos = pos;
      }

      return peg$cachedPosDetails;
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildException(message, expected, pos) {
      function cleanupExpected(expected) {
        var i = 1;

        expected.sort(function(a, b) {
          if (a.description < b.description) {
            return -1;
          } else if (a.description > b.description) {
            return 1;
          } else {
            return 0;
          }
        });

        while (i < expected.length) {
          if (expected[i - 1] === expected[i]) {
            expected.splice(i, 1);
          } else {
            i++;
          }
        }
      }

      function buildMessage(expected, found) {
        function stringEscape(s) {
          function hex(ch) { return ch.charCodeAt(0).toString(16).toUpperCase(); }

          return s
            .replace(/\\/g,   '\\\\')
            .replace(/"/g,    '\\"')
            .replace(/\x08/g, '\\b')
            .replace(/\t/g,   '\\t')
            .replace(/\n/g,   '\\n')
            .replace(/\f/g,   '\\f')
            .replace(/\r/g,   '\\r')
            .replace(/[\x00-\x07\x0B\x0E\x0F]/g, function(ch) { return '\\x0' + hex(ch); })
            .replace(/[\x10-\x1F\x80-\xFF]/g,    function(ch) { return '\\x'  + hex(ch); })
            .replace(/[\u0180-\u0FFF]/g,         function(ch) { return '\\u0' + hex(ch); })
            .replace(/[\u1080-\uFFFF]/g,         function(ch) { return '\\u'  + hex(ch); });
        }

        var expectedDescs = new Array(expected.length),
            expectedDesc, foundDesc, i;

        for (i = 0; i < expected.length; i++) {
          expectedDescs[i] = expected[i].description;
        }

        expectedDesc = expected.length > 1
          ? expectedDescs.slice(0, -1).join(", ")
              + " or "
              + expectedDescs[expected.length - 1]
          : expectedDescs[0];

        foundDesc = found ? "\"" + stringEscape(found) + "\"" : "end of input";

        return "Expected " + expectedDesc + " but " + foundDesc + " found.";
      }

      var posDetails = peg$computePosDetails(pos),
          found      = pos < input.length ? input.charAt(pos) : null;

      if (expected !== null) {
        cleanupExpected(expected);
      }

      return new SyntaxError(
        message !== null ? message : buildMessage(expected, found),
        expected,
        found,
        pos,
        posDetails.line,
        posDetails.column
      );
    }

    function peg$parsestart() {
      var s0, s1, s2, s3;

      s0 = peg$currPos;
      s1 = peg$parseintertokenSpace();
      if (s1 !== peg$FAILED) {
        s2 = [];
        s3 = peg$parsedatum();
        while (s3 !== peg$FAILED) {
          s2.push(s3);
          s3 = peg$parsedatum();
        }
        if (s2 !== peg$FAILED) {
          peg$reportedPos = s0;
          s1 = peg$c2(s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c0;
      }

      return s0;
    }

    function peg$parsedatum() {
      var s0, s1, s2, s3, s4;

      peg$silentFails++;
      s0 = peg$currPos;
      s1 = peg$parseintertokenSpace();
      if (s1 !== peg$FAILED) {
        s2 = peg$parsesimpleDatum();
        if (s2 !== peg$FAILED) {
          s3 = peg$parseintertokenSpace();
          if (s3 !== peg$FAILED) {
            peg$reportedPos = s0;
            s1 = peg$c4(s2);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$c0;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c0;
      }
      if (s0 === peg$FAILED) {
        s0 = peg$parsecompoundDatum();
        if (s0 === peg$FAILED) {
          s0 = peg$currPos;
          s1 = peg$currPos;
          s2 = peg$parselabel();
          if (s2 !== peg$FAILED) {
            if (input.charCodeAt(peg$currPos) === 61) {
              s3 = peg$c5;
              peg$currPos++;
            } else {
              s3 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c6); }
            }
            if (s3 !== peg$FAILED) {
              s4 = peg$parsedatum();
              if (s4 !== peg$FAILED) {
                s2 = [s2, s3, s4];
                s1 = s2;
              } else {
                peg$currPos = s1;
                s1 = peg$c0;
              }
            } else {
              peg$currPos = s1;
              s1 = peg$c0;
            }
          } else {
            peg$currPos = s1;
            s1 = peg$c0;
          }
          if (s1 !== peg$FAILED) {
            peg$reportedPos = s0;
            s1 = peg$c4(s1);
          }
          s0 = s1;
          if (s0 === peg$FAILED) {
            s0 = peg$currPos;
            s1 = peg$currPos;
            s2 = peg$parselabel();
            if (s2 !== peg$FAILED) {
              if (input.charCodeAt(peg$currPos) === 35) {
                s3 = peg$c7;
                peg$currPos++;
              } else {
                s3 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c8); }
              }
              if (s3 !== peg$FAILED) {
                s2 = [s2, s3];
                s1 = s2;
              } else {
                peg$currPos = s1;
                s1 = peg$c0;
              }
            } else {
              peg$currPos = s1;
              s1 = peg$c0;
            }
            if (s1 !== peg$FAILED) {
              peg$reportedPos = s0;
              s1 = peg$c4(s1);
            }
            s0 = s1;
          }
        }
      }
      peg$silentFails--;
      if (s0 === peg$FAILED) {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c3); }
      }

      return s0;
    }

    function peg$parsesimpleDatum() {
      var s0;
